[gd_scene load_steps=14 format=3 uid="uid://clm7o5ocig46s"]

[ext_resource type="PackedScene" uid="uid://y5cqwnshg50s" path="res://scenes/map/map.tscn" id="1_imm70"]
[ext_resource type="Script" uid="uid://bml5rycg8wq3v" path="res://scenes/run/run.gd" id="1_x1ycp"]
[ext_resource type="Resource" uid="uid://cj8wg6pkgahdr" path="res://scenes/run/run_startup.tres" id="2_yiexl"]
[ext_resource type="PackedScene" uid="uid://di04dbe481yuy" path="res://scenes/ui/card_pile_opener.tscn" id="4_ney7o"]
[ext_resource type="PackedScene" uid="uid://cb6e701xyfirv" path="res://scenes/ui/health_ui.tscn" id="4_pv6hd"]
[ext_resource type="PackedScene" uid="uid://tlt3hyoj0ida" path="res://scenes/ui/gold_ui.tscn" id="4_y5dly"]
[ext_resource type="PackedScene" uid="uid://df1tufvp2h0o5" path="res://scenes/ui/card_pile_view.tscn" id="5_7jmm0"]
[ext_resource type="PackedScene" uid="uid://cusrqvpni62dv" path="res://scenes/thread_handler/thread_handler.tscn" id="6_7cv5a"]
[ext_resource type="Script" uid="uid://cvittjk6naban" path="res://scenes/run/pause_menu.gd" id="10_cnkn7"]
[ext_resource type="FontFile" uid="uid://d3fuaowohtamf" path="res://art/Font Styles/PressStart2P-Regular.ttf" id="10_g42ja"]
[ext_resource type="FontFile" uid="uid://7ucfniysa1ko" path="res://art/Font Styles/pixel_rpg.ttf" id="11_cnkn7"]
[ext_resource type="PackedScene" uid="uid://cyj73muy4ysx2" path="res://scenes/thread_handler/thread_tooltip.tscn" id="11_vjuex"]

[sub_resource type="LabelSettings" id="LabelSettings_7yo0l"]
font = ExtResource("10_g42ja")
font_size = 8

[node name="Run" type="Node"]
script = ExtResource("1_x1ycp")
run_startup = ExtResource("2_yiexl")

[node name="Map" parent="." instance=ExtResource("1_imm70")]

[node name="CurrentView" type="Node" parent="."]

[node name="DebugButtons" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
alignment = 1

[node name="BattleButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Battle"

[node name="ShopButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Shop"

[node name="TreasureButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Treasure"

[node name="RewardsButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Rewards"

[node name="CampfireButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Campfire"

[node name="BestiaryButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Bestiary"

[node name="TopBar" type="CanvasLayer" parent="."]
layer = 3

[node name="Background" type="ColorRect" parent="TopBar"]
custom_minimum_size = Vector2(0, 18)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.501961)

[node name="BarItems" type="HBoxContainer" parent="TopBar"]
custom_minimum_size = Vector2(0, 18)
layout_direction = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 18.0
grow_horizontal = 2

[node name="HealthUI" parent="TopBar/BarItems" instance=ExtResource("4_pv6hd")]
unique_name_in_owner = true
layout_mode = 2
show_max_hp = true

[node name="GoldUI" parent="TopBar/BarItems" instance=ExtResource("4_y5dly")]
unique_name_in_owner = true
layout_mode = 2

[node name="ThreadHandlerContainer" type="CenterContainer" parent="TopBar/BarItems"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ThreadHandler" parent="TopBar/BarItems/ThreadHandlerContainer" instance=ExtResource("6_7cv5a")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 18)
layout_mode = 2

[node name="DeckButton" parent="TopBar/BarItems" node_paths=PackedStringArray("counter") instance=ExtResource("4_ney7o")]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="TopBar/BarItems/DeckButton"]
layout_mode = 0
offset_left = -4.0
offset_top = 6.0
offset_right = 4.0
offset_bottom = 19.0
text = "99"
horizontal_alignment = 1

[node name="DeckView" parent="TopBar" instance=ExtResource("5_7jmm0")]
unique_name_in_owner = true
visible = false

[node name="ThreadTooltip" parent="TopBar" instance=ExtResource("11_vjuex")]
unique_name_in_owner = true
visible = false

[node name="PauseMenu" type="CanvasLayer" parent="."]
process_mode = 3
layer = 5
visible = false
script = ExtResource("10_cnkn7")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -20.0
offset_right = 49.5
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_7yo0l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BackToGameButton" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("11_cnkn7")
theme_override_font_sizes/font_size = 6
text = "Resume"

[node name="SaveAndQuitButton" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(55, 14)
layout_mode = 2
theme_override_fonts/font = ExtResource("11_cnkn7")
theme_override_font_sizes/font_size = 6
text = "Save & Exit"
